WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135058
Take navigation snapshots whenever the current back-forward item is going to change
https://bugs.webkit.org/show_bug.cgi?id=135058
Summary
Take navigation snapshots whenever the current back-forward item is going to ...
Tim Horton
Reported
2014-07-18 11:41:07 PDT
Instead of trying to have the UI process figure out when to take navigation snapshots by itself, provide some help from the Web process (let the UI process know whenever we're going to change which back-forward item is "current") so that we can take snapshots at the right time when pushState happens, and so that we can bottleneck snapshotting down to just two places (instead of 5). <
rdar://problem/17464515
>
Attachments
patch
(19.27 KB, patch)
2014-07-18 12:07 PDT
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-07-18 12:07:27 PDT
Created
attachment 235134
[details]
patch
mitz
Comment 2
2014-07-18 12:37:56 PDT
Comment on
attachment 235134
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235134&action=review
> Source/WebCore/loader/HistoryController.cpp:882 > + m_frame.loader().client().willChangeCurrentHistoryItem();
Do we need to call this if we end up changing just the provisional item?
Tim Horton
Comment 3
2014-07-18 12:40:46 PDT
Comment on
attachment 235134
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235134&action=review
>> Source/WebCore/loader/HistoryController.cpp:882 >> + m_frame.loader().client().willChangeCurrentHistoryItem(); > > Do we need to call this if we end up changing just the provisional item?
No, good point. Thanks!
Tim Horton
Comment 4
2014-07-18 13:35:11 PDT
http://trac.webkit.org/changeset/171239
Ryosuke Niwa
Comment 5
2014-07-19 00:26:59 PDT
Looks like this caused a PLT regression on all platforms.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug